[package]
name = "rust_warp_api"
version = "0.1.0"
authors = ["andrewleverette <andrew.leverette@decisionsource.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tokio = { version = "1.2.0", features = ["full"] }
warp = "0.3.0"
